prow/cluster/test-workloads.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-workloads
