prow/cluster/pipeline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: pipeline
  labels:
    app: pipeline
  annotations:
    wave.pusher.com/update-on-config-change: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pipeline
  template:
    metadata:
      labels:
        app: pipeline
    spec:
      serviceAccountName: pipeline
      containers:
      - name: pipeline
        image: gcr.io/k8s-prow/pipeline:v20200813-535fb53bd1
        args:
        - --config=/etc/config/configs.yaml
        volumeMounts:
          - name: configs
            mountPath: /etc/config
            readOnly: true
      volumes:
        - name: configs
          configMap:
            name: configs
