prow/cluster/ghproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-infra
  name: ghproxy
  labels:
    app: ghproxy
spec:
  selector:
    matchLabels:
      app: ghproxy
  replicas: 1 # TODO(fejta): this should be HA
  template:
    metadata:
      labels:
        app: ghproxy
    spec:
      containers:
        - name: ghproxy
          image: gcr.io/k8s-prow/ghproxy:v20200813-535fb53bd1
          args:
            - --cache-dir=/cache
            - --cache-sizeGB=99
            - --push-gateway=pushgateway
            - --serve-metrics=true
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ghproxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghproxy
  namespace: test-infra
  name: ghproxy
spec:
  ports:
    - name: main
      port: 80
      protocol: TCP
      targetPort: 8888
    - name: metrics
      port: 9090
  selector:
    app: ghproxy
  type: ClusterIP
